# template_customuser

./: manage.py  pyproject.toml
accounts/: models.py
accounts/migrations/: 0001_initial.py
template_customuser/: asgi.py  settings.py  urls.py  wsgi.py
