[tool.poetry]
name = "template_customuser"
version = "0.1.0"
description = "CustomUser Template"
authors = ["alperarslan <aarslan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
